2002-07-02  Derek Atkins  <derek@ihtfp.com>

	* register/register-gnome/gnucash-sheet.c: allow a caller to
	"unset" the popup menu by passing a NULL popup.

	* business/business-gnome/dialog-invoice.c: use glade for the
	popup.  Only set the popup for Read-Write invoices.
	* business/business-gnome/glade/invoice.glade: define the popup
	menu in glade.
	
2002-07-01  Derek Atkins  <derek@ihtfp.com>

	* business-gnome/dialog-invoice.c: make all my callbacks
	non-static; remove the toolbar creation code.
	* business-gnome/glade/invoice.glade: create the toolbar in glade.
	
2002-07-01  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-scheduledxaction.c:
	* src/gnome/dialog-sxsincelast.c: 
	* src/app-utils/prefs.scm: Added options/code-support for
	saving/restoring sizes of SX-related windows.  Fixes bug 86007.

2002-07-01  Derek Atkins  <derek@ihtfp.com>
	* Convert all (well, most all) HTML URL-generators to use
	gnc_build_url() (or gnc:html-build-url in scheme) instead of
	assuming the HTML prototype string.  Unfortunately the
	help-window-index.scm cannot be fixed.

2002-07-01  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome-utils/gnc-dense-cal.c (gnc_dense_cal_mark_remove):
	Unrealistic marks [such as '-1'] are now ignored instead of
	hitting assertion.

	* src/gnome/dialog-scheduledxaction.c: Dead code removal; naming
	clarifications.
	(gnc_sxed_check_consistent): Added.
	(gnc_sxed_check_changed): Added; used when the cancel button is
	pressed.  SX editor now queries the user if the SX has changed.
	(gnc_sxed_save_sx): Added; seperated from consistency-check.
	(_gnc_sxed_get_widgets): Added; many glade_xml_get_widget(...)s
	removed from code.
	(free_var_numeric): Added; we now cleanup the temporary variable
	table correctly after doing balance checking.
	(schedXact_editor_create_ledger): RegWidget toolbar shouldn't
	expand; fixed.
	(putSchedXactionInDialog): Fixed assertion-failure/abort when a
	previously-unscheduled SX is scheduled.
