@@ -1100,6 +1100,7 @@ gnc_invoice_new_window (GNCBook *bookp, InvoiceDialogType type,
 
   /* grab the menubar widgets */
   iw->menubar_dock = glade_xml_get_widget (xml, "menu_dock");
+  iw->menubar = glade_xml_get_widget (xml, "menubar1");
 
   /* grab the statusbar */
   iw->statusbar = glade_xml_get_widget (xml, "status_bar");
@@ -1134,20 +1135,6 @@ gnc_invoice_new_window (GNCBook *bookp, InvoiceDialogType type,
 
   /* Set the entry_ledger's invoice */
   gnc_entry_ledger_set_default_invoice (entry_ledger, invoice);
-
-  /* load the menu bar */
-  /*
-  {
-    GtkWidget *menubar;
-
-    menubar = gnc_invoice_window_create_menubar (iw);
-    gtk_container_set_border_width (GTK_CONTAINER (menubar), 2);
-    gtk_container_add (GTK_CONTAINER (iw->menubar_dock), menubar);
-    gtk_widget_show_all (iw->menubar_dock);
-  }
-  */
-
-  gtk_widget_show_all (glade_xml_get_widget (xml, "dock1"));
 
   /* Setup initial values */
   iw->invoice_guid = *gncInvoiceGetGUID (invoice);
